# naoPlayingMemory

./: .gitignore  .gitmodules  CMakeLists.txt  PossibleStructure  README.md  package.xml
action/: AskQuestion.action
launch/: memory.launch  tutorial.launch
msg/: Cards.msg  ConcealedCard.msg  ExposedCard.msg
owl/: Game.owl  Nao_computables.owl  Robot.owl  catalog-v001.xml  game.owl
prolog/: init.pl  my_utils.pl  robot.pl
src/: PrologClient.h  main.cpp
src/action/: CMakeLists.txt  SpeechClient.cpp  SpeechClient.h  main.cpp
src/perception/: CMakeLists.txt  GridElement.cpp  SpeechRecognition.cpp  Vision.cpp  Vision.h  main.cpp
src/perception/speech/: SpeechRecognition.cpp  SpeechRecognition.h
src/perception/vision/: Card.h  GridBoard.cpp  GridBoard.h  GridElement.h  Vision.cpp  Vision.h
src/reasoning/: Action.h  ActionBlocker.cpp  ActionBlocker.h  CMakeLists.txt  CardStateRetriever.cpp  CardStateRetriever.h  FilterRecognizeTurn.cpp  FilterRecognizeTurn.h  NaoState.cpp  NaoState.h  NodeManager.cpp  NodeManager.h  PrologClient.cpp  PrologClient.h  State.h  StateProcessor.cpp  StateProcessor.h  TurnCard.h  main.cpp
src/reasoning/model/: CardPosition.cpp  CardPosition.h  ConcealedCard.h  ExposedCard.cpp  ExposedCard.h
src/reasoning/prolog/: ConcealedCard.cpp  ConcealedCard.h  DataProperty.cpp  DataProperty.h  ExposedCard.h  Instance.cpp  ObjectProperty.cpp  ObjectProperty.h  PrologClient.cpp  PrologClient.h  PrologEntities.h  StateProcessor.cpp  StateProcessor.h
src/reasoning/prolog/classes/: Card.cpp  Card.h  CardPosition.cpp  CardPosition.h  Classes.h  Instance.cpp  Instance.h
src/speech/: CMakeLists.txt  main.cpp
src/speech/speech/: SpeechRecognition.cpp  SpeechRecognition.h
src/test_client/: CMakeLists.txt  main.cpp
