<package>
  <name>nao_playing_memory</name>
  <version>0.0.0</version>
  <description>This project has the goal to make the NAO robot play memory using prolog reasoning</description>

  <maintainer email="20560137+aWeinzierl@users.noreply.github.com">Andreas Weinzierl</maintainer>
  <maintainer email="private@privacy.com">Henrique Sousa</maintainer>
  <maintainer email="private@privacy.com">Florian Lay</maintainer>

  <license>//TODO</license>

  <author>Henrique Sousa</author>
  <author>Florian Lay</author>
  <author email="20560137+aWeinzierl@users.noreply.github.com">Andreas Weinzierl</author>

  <url type="repository">https://github.com/aWeinzierl/naoPlayingMemory</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>naoqi_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>json_prolog</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>naoqi_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>json_prolog</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <export>

  </export>
</package>
